Consolidate .gitignore files and clear Git cache

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,42 @@
-templates/
-repository_backup/
 /rynok/src/main/resources/application-local.properties
 /rynok/src/main/resources/application-prod.properties
 /rynok/src/main/resources/application.properties
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Maven ###
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### Miscellaneous ###
+HELP.md
+repository_backup/
+templates/
